@@ -7,4 +7,6 @@ Thanks go to:
 
 - Satoru SATOH for GNOME Keyring support
 
+- Julien Larigaldie for MS Exchange pickup directory support
+
 - all senders of bug reports and problem descriptions
