@@ -2112,6 +2112,12 @@ int main(int argc, char *argv[])
 		    free(cmdline_account->delivery_args);
 		    cmdline_account->delivery_args = expand_tilde(optarg + 5);
 		}
+		else if (strncmp(optarg, "exchange,", 9) == 0)
+		{
+		    cmdline_account->delivery_method = DELIVERY_METHOD_EXCHANGE;
+		    free(cmdline_account->delivery_args);
+		    cmdline_account->delivery_args = expand_tilde(optarg + 9);
+		}
 		else
 		{
 		    print_error(_("invalid argument %s for %s"), 
@@ -2535,6 +2541,10 @@ int main(int argc, char *argv[])
 		else if (account->delivery_method == DELIVERY_METHOD_MBOX)
 		{
 		    printf("mbox");
+		}
+		else if (account->delivery_method == DELIVERY_METHOD_EXCHANGE)
+		{
+		    printf("exchange");
 		}
 		printf(" %s\n", account->delivery_args);
 		printf("uidls file            = %s\n"
